# interactive-spotless-splats

./: .gitignore  README.md  pyproject.toml
scripts/: extract_sd_features.py
trainer/: __init__.py  sd_features.py
trainer/spotless/: __init__.py  dataset.py  encoding.py  mask.py  mlp.py  stats.py
viewer/: __main__.py  app.py  camera.py  input.py  renderer.py  scene.py  theme.py  trainer.py  ui.py
viewer/camera/: __init__.py  base.py  dataset.py  factory.py  fps.py  orbit.py  state.py
viewer/loaders/: colmap.py  ply.py
viewer/rendering/: colormaps.py  debug_pass.py  gl_resources.py  gsplat_pass.py  quad_pass.py  renderer.py  shaders.py
viewer/scene/: __init__.py  bounds.py  coordinate_system.py  frustums.py  gaussian_data.py  loaders.py  point_cloud.py  state.py
viewer/ui/: __init__.py  panels.py  render_settings.py  spotless_panel.py  trainer_panel.py  ui.py
