[project]
name = "interactive-spotless-splats"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "imgui-bundle>=1.92.801",
    "numpy>=2.2.6",
    "plyfile>=1.1.3",
    "pyopengl>=3.1.10",
    "torch>=2.12.0",
    "gsplat",
    "glfw>=2.10.0",
    "loguru>=0.7.3",
    "pillow>=12.2.0",
]

[tool.uv.sources]
gsplat = { path = "external/gsplat" }
